Project now runs on SpringBoot